k8s/django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-backend
  template:
    metadata:
      labels:
        app: django-backend
    spec:
      containers:
      - name: django-backend
        image: devitworld/backend:latest
        ports:
        - containerPort: 8000
      imagePullSecrets:
        - name: dockerhub
