k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-postgres
spec:
  selector:
    app: api-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
