k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: budgetsgtt4akwwrl.controllabs.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-backend
            port:
              number: 8000
